menambahkan sintaks pada file html dan membuat style css

--- a/index.html
+++ b/index.html
@@ -2,36 +2,118 @@
 <html>
 <head>
     <title>Homepage</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fjalla+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Hizkia Polii</h2>
-    <hr>
-    <h4>Homepage</h4> 
-    <h4>Gallery</h4> 
-    <h4>Blog</h4> 
-    <h4>Contact</h4>
-    <hr>
-    <h2>Home</h2>
-    <p>Halo, perkenalkan, saya Hizkia Polii. Saya adalah seorang mahasiswa dari Universitas Sam Ratulangi, Fakultas Teknik, Jurusan Elektro, dengan program studi Informatika.</p>
-    <p>Ini adalah personal homepage pertama saya, dan saya masih belajar cara membuat personal homepage yang menarik dan terstruktur</p>
-    <h2>Gallery</h2>
-    <img src="Picture/Pohon.jpg" alt="Langit">
-    <img src="Picture/Kocheng.jpg" alt="Kucing saya">
-    <img src="Picture/huhuhu.jpg" alt="Saya fans madrid">
-    <h2>Blog</h2>
-    <h3>Liga Spanyol: Barcelona Tak Akan Iri jika Kylian Mbappe Gabung Real Madrid</h3>
-        <img src="Picture/Mbappe.jpg" alt="Mbappe">
-        <p>Barcelona sama sekali tak iri jika Kylian Mbappe melanjutkan kariernya bersama Real Madrid. Baca selengkapnya <a href="https://www.bola.com/spanyol/read/5557074/liga-spanyol-barcelona-tak-akan-iri-jika-kylian-mbappe-gabung-real-madrid">disini</a></p>
-    <h3>Sopulut, Olahan dari Alam yang Jadi Kuliner Khas Sulawesi Utara</h3>
-        <img src="Picture/Sopulut.jpg" alt="Sopulut">
-        <p> Sopulut merupakan makanan dari Sulawesi Utara yang sudah dikenal sejak zaman dahulu oleh para leluhur etnis Tonsawang. Meski tidak dapat dipastikan persis kemunculannya, tetapi sopulut sudah menjadi makanan favorit masyarakat secara turun-temurun hingga sekarang.<br> 
-            Baca selengkapnya <a href="https://www.liputan6.com/regional/read/5209135/sopulut-olahan-dari-alam-yang-jadi-kuliner-khas-sulawesi-utara">disini</a></p>
-    <h3>GTA 6 Akhirnya Muncul di Situs Rockstar Games, Siap Rilis 2025</h3>
-        <img src="Picture/GTA.jpg" alt="GTA6">
-        <p>GTA 6 menjadi game paling ambisius buatan Rockstar Games, dan sudah lama dinanti oleh gamer di seluruh dunia. Terbukti, trailer GTA 6 sudah mengantongi jumlah view hingga 180 juta di YouTube hingga saat ini.<br>
-        Baca selengkapnya <a href="https://www.liputan6.com/tekno/read/5549266/gta-6-akhirnya-muncul-di-situs-rockstar-games-siap-rilis-2025">disini</a></p>
-    <h2>Contact</h2>
-    <p>Contact me : +62895336109477 <br>
-        Email : hizkiapolii026@student.unsrat.ac.id</p>
+    <header>
+        <div class="nama">
+            <h1>Hizkia Polii</h1>
+        </div>
+        <div class="point">
+            <div class="point-item">
+                <img src="Picture/home.png" alt="Home">
+                <a href="#home"><h3>Homepage</h3></a>
+            </div>
+            <div class="point-item">
+                <img src="Picture/galeri.png" alt="Galeri">
+                <a href="#gallery"><h3>Gallery</h3></a>
+            </div>
+            <div class="point-item">
+                <img src="Picture/blog.png" alt="Blog">
+                <a href="#blog"><h3>Blog</h3></a>
+            </div>
+            <div class="point-item">
+                <img src="Picture/kontak.png" alt="Kontak">
+                <a href="#contact"><h3>Contact</h3></a>
+            </div>
+        </div>
+    </header>
+    <div class="bagian" id="home">
+        <div class="home">
+            <h2>Pengenalan</h2>
+            <img src="Picture/Profil.jpg" alt="Foto Diri">
+            <p>Halo, saya Hizkia Polii, seorang mahasiswa yang tengah menempuh pendidikan di Universitas Sam Ratulangi, tepatnya di Fakultas Teknik, Jurusan Elektro dengan program studi Informatika. Saya bersemangat dalam menggali pengetahuan dan keterampilan di bidang teknologi informasi serta berharap dapat memberikan kontribusi yang berarti dalam perkembangan dunia teknologi di masa depan.</p>
+            <br>
+            <p>Ini adalah personal homepage pertama saya, dan saya masih belajar cara membuat personal homepage yang menarik dan terstruktur. Saya sedang menggali pengetahuan tentang desain web dan mencoba berbagai teknik untuk membuat halaman ini lebih menarik bagi pengunjung. Dalam proses pembelajaran ini, saya juga berusaha untuk menjaga agar halaman tersebut terstruktur dengan baik, sehingga informasi yang saya bagikan dapat tersampaikan dengan jelas dan mudah dipahami.</p>
+        </div>
+    </div>
+    <div class="bagian" id="gallery">
+        <div class="galeri">
+            <h2>Gallery</h2>
+            <div class="galeri-content">
+                <img src="Picture/Pohon.jpg" alt="Langit">
+                <img src="Picture/Kocheng.jpg" alt="Kucing saya">
+                <img src="Picture/huhuhu.jpg" alt="Saya fans madrid">
+                <img src="Picture/Hujan.jpg" alt="Hujannnnn">
+                <img src="Picture/Senja.jpg" alt="Sunset">
+            </div>
+        </div>
+    </div>
+    <div class="bagian" id="blog">
+        <div class="artikel">
+            <h2>Blog</h2>
+            <div class="blog-post">
+                <h3>Liga Spanyol: Barcelona Tak Akan Iri jika Kylian Mbappe Gabung Real Madrid</h3>
+                <img src="Picture/Mbappe.jpg" alt="Mbappe">
+                <p>Barcelona sama sekali tak iri jika Kylian Mbappe melanjutkan kariernya bersama Real Madrid. Baca selengkapnya <a href="https://www.bola.com/spanyol/read/5557074/liga-spanyol-barcelona-tak-akan-iri-jika-kylian-mbappe-gabung-real-madrid">disini</a></p>
+                <h3>Sopulut, Olahan dari Alam yang Jadi Kuliner Khas Sulawesi Utara</h3>
+                <img src="Picture/Sopulut.jpg" alt="Sopulut">
+                <p> Sopulut merupakan makanan dari Sulawesi Utara yang sudah dikenal sejak zaman dahulu oleh para leluhur etnis Tonsawang. Meski tidak dapat dipastikan persis kemunculannya, tetapi sopulut sudah menjadi makanan favorit masyarakat secara turun-temurun hingga sekarang.<br> 
+                    Baca selengkapnya <a href="https://www.liputan6.com/regional/read/5209135/sopulut-olahan-dari-alam-yang-jadi-kuliner-khas-sulawesi-utara">disini</a></p>
+                <h3>GTA 6 Akhirnya Muncul di Situs Rockstar Games, Siap Rilis 2025</h3>
+                <img src="Picture/GTA.jpg" alt="GTA6">
+                <p>GTA 6 menjadi game paling ambisius buatan Rockstar Games, dan sudah lama dinanti oleh gamer di seluruh dunia. Terbukti, trailer GTA 6 sudah mengantongi jumlah view hingga 180 juta di YouTube hingga saat ini.<br>
+                Baca selengkapnya <a href="https://www.liputan6.com/tekno/read/5549266/gta-6-akhirnya-muncul-di-situs-rockstar-games-siap-rilis-2025">disini</a></p>
+                <h3>Fakta-fakta Apple Vision Pro, Simak Kecanggihannya</h3>
+                <img src="Picture/Apple.jpg" alt="Apple Vision Pro">
+                <p> Apple resmi merilis Vision Pro, Jumat (2/2), di Amerika Serikat (AS) dengan banderol mulai US$3.499 atau setara Rp55 juta. Secanggih apa perangkat terbaru Apple ini? Baca selengkapnya <a href="https://www.cnnindonesia.com/teknologi/20240205191559-185-1058994/fakta-fakta-apple-vision-pro-simak-kecanggihannya">disini</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="bagian" id="contact">
+        <div class="kontak">
+            <h2>Contact</h2>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <img src="Picture/phone.png" alt="Nomor">
+                    <p>+62895336109477</p>
+                </div>
+                <div class="contact-item">
+                    <img src="Picture/gmail.png" alt="Gmail">
+                    <p>hizkiapolii026@student.unsrat.ac.id</p>
+                </div>
+            </div>
+            <h3>Follow me on:</h3>
+            <div class="sosmed">
+                <div>
+                    <a href="https://www.facebook.com/hizkia.polii.1">
+                        <img src="Picture/Facebook Icon.jpg" alt="Facebook">
+                        <p>Hizkia N Polii</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="https://twitter.com/hizkiapolii__">
+                        <img src="Picture/Twitter X Line.png" alt="Twitter">
+                        <p>@hizkiapolii__</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="https://www.instagram.com/hizkiapolii__/">
+                        <img src="Picture/Instagram Black Line.png" alt="Instagram">
+                        <p>hizkiapolii__</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="https://github.com/HizkiaPolii">
+                        <img src="Picture/github-mark.png" alt="Github">
+                        <p>HizkiaPolii</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>    
 </body>
 </html>
