--- a/index.html
+++ b/index.html
@@ -1,119 +1,262 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Homepage</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fjalla+One&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <div class="nama">
-            <h1>Hizkia Polii</h1>
-        </div>
-        <div class="point">
-            <div class="point-item">
-                <img src="Picture/home.png" alt="Home">
-                <a href="#home"><h3>Homepage</h3></a>
-            </div>
-            <div class="point-item">
-                <img src="Picture/galeri.png" alt="Galeri">
-                <a href="#gallery"><h3>Gallery</h3></a>
-            </div>
-            <div class="point-item">
-                <img src="Picture/blog.png" alt="Blog">
-                <a href="#blog"><h3>Blog</h3></a>
-            </div>
-            <div class="point-item">
-                <img src="Picture/kontak.png" alt="Kontak">
-                <a href="#contact"><h3>Contact</h3></a>
-            </div>
-        </div>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav>
+      <div class="nav-name">
+        <p>Hizkia Polii</p>
+      </div>
+      <ul class="nav-points">
+        <li class="points"><a href="#Home">Home</a></li>
+        <li class="points"><a href="#Gallery">Gallery</a></li>
+        <li class="points"><a href="#Blog">Blog</a></li>
+        <li class="points"><a href="#Contact">Contact</a></li>
+      </ul>
+      <select
+        class="button"
+        id="modeSelector"
+        onchange="changeBackground(this.value)"
+      >
+        <option value="dark">Dark mode</option>
+        <option value="light">Light mode</option>
+      </select>
+      <select class="button" onchange="changeLanguage(this.value)">
+        <option value="idn">Indonesia</option>
+        <option value="en">English</option>
+      </select>
+    </nav>
+
+    <header class="container">
+      <div class="pengenalan" id="Home">
+        <span class="blur"></span>
+        <span class="blur"></span>
+        <h4 id="pengenalan">Pengenalan</h4>
+        <h1 id="nama">Halo, saya Hizkia Polii</h1>
+        <p id="deskripsi1">
+          seorang mahasiswa yang tengah menempuh pendidikan di Universitas Sam
+          Ratulangi, tepatnya di Fakultas Teknik, Jurusan Elektro dengan program
+          studi Informatika. Saya bersemangat dalam menggali pengetahuan dan
+          keterampilan di bidang teknologi informasi serta berharap dapat
+          memberikan kontribusi yang berarti dalam perkembangan dunia teknologi
+          di masa depan.
+        </p>
+        <br />
+        <p id="deskripsi2">
+          Ini adalah personal homepage pertama saya, dan saya masih belajar cara
+          membuat personal homepage yang menarik dan terstruktur. Saya sedang
+          menggali pengetahuan tentang desain web dan mencoba berbagai teknik
+          untuk membuat halaman ini lebih menarik bagi pengunjung. Dalam proses
+          pembelajaran ini, saya juga berusaha untuk menjaga agar halaman
+          tersebut terstruktur dengan baik, sehingga informasi yang saya bagikan
+          dapat tersampaikan dengan jelas dan mudah dipahami.
+        </p>
+      </div>
+      <div class="foto">
+        <img src="Picture/Profil.jpg" alt="Foto diri" />
+      </div>
     </header>
-    <div class="bagian" id="home">
-        <div class="home">
-            <h2>Pengenalan</h2>
-            <img src="Picture/Profil.jpg" alt="Foto Diri">
-            <p>Halo, saya Hizkia Polii, seorang mahasiswa yang tengah menempuh pendidikan di Universitas Sam Ratulangi, tepatnya di Fakultas Teknik, Jurusan Elektro dengan program studi Informatika. Saya bersemangat dalam menggali pengetahuan dan keterampilan di bidang teknologi informasi serta berharap dapat memberikan kontribusi yang berarti dalam perkembangan dunia teknologi di masa depan.</p>
-            <br>
-            <p>Ini adalah personal homepage pertama saya, dan saya masih belajar cara membuat personal homepage yang menarik dan terstruktur. Saya sedang menggali pengetahuan tentang desain web dan mencoba berbagai teknik untuk membuat halaman ini lebih menarik bagi pengunjung. Dalam proses pembelajaran ini, saya juga berusaha untuk menjaga agar halaman tersebut terstruktur dengan baik, sehingga informasi yang saya bagikan dapat tersampaikan dengan jelas dan mudah dipahami.</p>
+
+    <section class="galeri">
+      <h2 class="header" id="Gallery">Galeri</h2>
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 7</div>
+          <img src="Picture/Myself.jpg" style="width: 100%" />
+          <div class="text">MySelf</div>
         </div>
-    </div>
-    <div class="bagian" id="gallery">
-        <div class="galeri">
-            <h2>Gallery</h2>
-            <div class="galeri-content">
-                <img src="Picture/Pohon.jpg" alt="Langit">
-                <img src="Picture/Kocheng.jpg" alt="Kucing saya">
-                <img src="Picture/huhuhu.jpg" alt="Saya fans madrid">
-                <img src="Picture/Hujan.jpg" alt="Hujannnnn">
-                <img src="Picture/Senja.jpg" alt="Sunset">
-            </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 7</div>
+          <img src="Picture/Kocheng.jpg" style="width: 100%" />
+          <div class="text">My pet</div>
         </div>
-    </div>
-    <div class="bagian" id="blog">
-        <div class="artikel">
-            <h2>Blog</h2>
-            <div class="blog-post">
-                <h3>Liga Spanyol: Barcelona Tak Akan Iri jika Kylian Mbappe Gabung Real Madrid</h3>
-                <img src="Picture/Mbappe.jpg" alt="Mbappe">
-                <p>Barcelona sama sekali tak iri jika Kylian Mbappe melanjutkan kariernya bersama Real Madrid. Baca selengkapnya <a href="https://www.bola.com/spanyol/read/5557074/liga-spanyol-barcelona-tak-akan-iri-jika-kylian-mbappe-gabung-real-madrid">disini</a></p>
-                <h3>Sopulut, Olahan dari Alam yang Jadi Kuliner Khas Sulawesi Utara</h3>
-                <img src="Picture/Sopulut.jpg" alt="Sopulut">
-                <p> Sopulut merupakan makanan dari Sulawesi Utara yang sudah dikenal sejak zaman dahulu oleh para leluhur etnis Tonsawang. Meski tidak dapat dipastikan persis kemunculannya, tetapi sopulut sudah menjadi makanan favorit masyarakat secara turun-temurun hingga sekarang.<br> 
-                    Baca selengkapnya <a href="https://www.liputan6.com/regional/read/5209135/sopulut-olahan-dari-alam-yang-jadi-kuliner-khas-sulawesi-utara">disini</a></p>
-                <h3>GTA 6 Akhirnya Muncul di Situs Rockstar Games, Siap Rilis 2025</h3>
-                <img src="Picture/GTA.jpg" alt="GTA6">
-                <p>GTA 6 menjadi game paling ambisius buatan Rockstar Games, dan sudah lama dinanti oleh gamer di seluruh dunia. Terbukti, trailer GTA 6 sudah mengantongi jumlah view hingga 180 juta di YouTube hingga saat ini.<br>
-                Baca selengkapnya <a href="https://www.liputan6.com/tekno/read/5549266/gta-6-akhirnya-muncul-di-situs-rockstar-games-siap-rilis-2025">disini</a></p>
-                <h3>Fakta-fakta Apple Vision Pro, Simak Kecanggihannya</h3>
-                <img src="Picture/Apple.jpg" alt="Apple Vision Pro">
-                <p> Apple resmi merilis Vision Pro, Jumat (2/2), di Amerika Serikat (AS) dengan banderol mulai US$3.499 atau setara Rp55 juta. Secanggih apa perangkat terbaru Apple ini? Baca selengkapnya <a href="https://www.cnnindonesia.com/teknologi/20240205191559-185-1058994/fakta-fakta-apple-vision-pro-simak-kecanggihannya">disini</a></p>
-            </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 7</div>
+          <img src="Picture/Kocheng2.jpg" style="width: 100%" />
+          <div class="text">My pet too</div>
         </div>
-    </div>
-    <div class="bagian" id="contact">
-        <div class="kontak">
-            <h2>Contact</h2>
-            <div class="contact-info">
-                <div class="contact-item">
-                    <img src="Picture/phone.png" alt="Nomor">
-                    <p>+62895336109477</p>
-                </div>
-                <div class="contact-item">
-                    <img src="Picture/gmail.png" alt="Gmail">
-                    <p>hizkiapolii026@student.unsrat.ac.id</p>
-                </div>
-            </div>
-            <h3>Follow me on:</h3>
-            <div class="sosmed">
-                <div>
-                    <a href="https://www.facebook.com/hizkia.polii.1">
-                        <img src="Picture/Facebook Icon.jpg" alt="Facebook">
-                        <p>Hizkia N Polii</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="https://twitter.com/hizkiapolii__">
-                        <img src="Picture/Twitter X Line.png" alt="Twitter">
-                        <p>@hizkiapolii__</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="https://www.instagram.com/hizkiapolii__/">
-                        <img src="Picture/Instagram Black Line.png" alt="Instagram">
-                        <p>hizkiapolii__</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="https://github.com/HizkiaPolii">
-                        <img src="Picture/github-mark.png" alt="Github">
-                        <p>HizkiaPolii</p>
-                    </a>
-                </div>
-            </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">4 / 7</div>
+          <img src="Picture/huhuhu.jpg" style="width: 100%" />
+          <div class="text">Best football club</div>
         </div>
-    </div>    
-</body>
+
+        <div class="mySlides fade">
+          <div class="numbertext">5 / 7</div>
+          <img src="Picture/Hujan.jpg" style="width: 100%" />
+          <div class="text">Rain</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">6 / 7</div>
+          <img src="Picture/Senja.jpg" style="width: 100%" />
+          <div class="text">Sunset</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">7 / 7</div>
+          <img src="Picture/Pohon.jpg" style="width: 100%" />
+          <div class="text">Woods</div>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
+      </div>
+      <br />
+
+      <div style="text-align: center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
+        <span class="dot" onclick="currentSlide(7)"></span>
+      </div>
+    </section>
+
+    <section class="container">
+      <h2 class="header" id="Blog">Blog</h2>
+      <span class="blur"></span>
+      <span class="blur"></span>
+      <div class="blog1">
+        <div class="gambar">
+          <div class="artikel">
+            <h4 id="artikel1">
+              Liga Spanyol: Barcelona Tak Akan Iri jika Kylian Mbappe Gabung
+              Real Madrid
+            </h4>
+            <img src="Picture/Mbappe.jpg" />
+            <p>
+              <a
+                href="https://www.bola.com/spanyol/read/5557074/liga-spanyol-barcelona-tak-akan-iri-jika-kylian-mbappe-gabung-real-madrid"
+                id="link"
+                >Baca selengkapnya disini</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="gambar">
+          <div class="artikel">
+            <h4 id="artikel2">
+              Sopulut, Olahan dari Alam yang Jadi Kuliner Khas Sulawesi Utara
+            </h4>
+            <img src="Picture/Sopulut.jpg" />
+            <p>
+              <a
+                href="https://www.liputan6.com/regional/read/5209135/sopulut-olahan-dari-alam-yang-jadi-kuliner-khas-sulawesi-utara"
+                id="link2"
+                >Baca selengkapnya disini</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="gambar">
+          <div class="artikel">
+            <h4 id="artikel3">
+              GTA 6 Akhirnya Muncul di Situs Rockstar Games, Siap Rilis 2025
+            </h4>
+            <img src="Picture/GTA.jpg" />
+            <p>
+              <a
+                href="https://www.liputan6.com/tekno/read/5549266/gta-6-akhirnya-muncul-di-situs-rockstar-games-siap-rilis-2025"
+                id="link3"
+                >Baca selengkapnya disini</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="blog2">
+        <div class="gambar">
+          <div class="artikel">
+            <h4 id="artikel4">
+              Fakta-fakta Apple Vision Pro, Simak Kecanggihannya
+            </h4>
+            <img src="Picture/Apple.jpg" />
+            <p>
+              <a
+                href="https://www.cnnindonesia.com/teknologi/20240205191559-185-1058994/fakta-fakta-apple-vision-pro-simak-kecanggihannya"
+                id="link4"
+                >Baca selengkapnya disini</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="gambar">
+          <div class="artikel">
+            <h4 id="artikel5">
+              Apa itu Cryptocurrency dan bagaimana cara kerjanya?
+            </h4>
+            <img src="Picture/crypto.jpg" />
+            <p>
+              <a
+                href="https://www.kaspersky.com/resource-center/definitions/what-is-cryptocurrency"
+                id="link5"
+                >Baca selengkapnya disini</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="gambar">
+          <div class="artikel">
+            <h4 id="artikel6">Esports Resmi jadi Olahraga Prestasi</h4>
+            <img src="Picture/esport.jpg" />
+            <p>
+              <a
+                href="https://indonesiabaik.id/infografis/esports-resmi-jadi-olahraga-prestasi"
+                id="link6"
+                >Baca selengkapnya disini</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="container" id="Contact">
+      <div class="kolom">
+        <div class="nama">
+          <h3>Hizkia Polii</h3>
+        </div>
+      </div>
+      <div class="kolom">
+        <h4 id="kontak">Kontak saya</h4>
+        <p>+62895336109477</p>
+      </div>
+      <div class="kolom">
+        <h4>Email</h4>
+        <p>@hizkiapolii026@student.unsrat.ac.id</p>
+      </div>
+      <div class="kolom">
+        <h4 id="sosmed">Media sosial</h4>
+        <span class="blur"></span>
+        <span class="blur"></span>
+        <a href="https://www.facebook.com/hizkia.polii.1"
+          ><img src="Picture/facebook-circle-fill.png" />@Hizkia N Polii</a
+        ><br />
+        <a href="https://www.instagram.com/hizkiapolii__/"
+          ><img src="Picture/instagram-fill.png" />@hizkiapolii__</a
+        ><br />
+        <a href="https://twitter.com/hizkiapolii__"
+          ><img src="Picture/twitter-x-line.png" />@hizkiapolii__</a
+        ><br />
+        <a href="https://github.com/HizkiaPolii"
+          ><img src="Picture/github-fill.png" />@HizkiaPolii</a
+        ><br />
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
 </html>
